put the components/pages together

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,56 @@
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
+
+a {
+  margin: 20px 30px 0px 0px;
+  font-family: "Abril", serif;
+  color: darkblue;
+}
+
+body {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #002F2F;
+  font-family: courier;
+}
+nav {
+  display: inline-block;
+}
+
+ul {
+  font-style: bold;
+  text-decoration: none;
+  list-style: none;
+  display: inline-block;
+}
+
+body {
+  background: white;
+}
+
+h1 {
+  font-size: 26px;
+  color: darkblue;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+  font-family: 'Abril Fatface', cursive;
+}
+
+h2 {
+  font-size: 24px;
+  color: #046380;
+  text-align: center;
+  font-family: "Abril Fatface", cursive;
+}
+
+h3 {
+  font-size: 22px;
+  color: #046380;
+  text-align: center;
+  font-family: "Abril Fatface", cursive;
+}
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
